# T1-

./: .gitignore  CMakeLists.txt  README.md
demo/: program.cpp
demo/scenes/: pbr_test.cpp  pbr_test.h
t1_engine/: CMakeLists.txt  t1_engine.cpp  t1_engine.h
t1_engine/camera/: camera.cpp  camera.h  camera_frustum.cpp  camera_frustum.h  fly_camera.cpp  fly_camera.h
t1_engine/lighting/: directional_light.h  point_light.h
t1_engine/mesh/: circle.cpp  circle.h  cube.cpp  cube.h  line_strip.cpp  line_strip.h  mesh.cpp  mesh.h  plane.cpp  plane.h  quad.cpp  quad.h  sphere.cpp  sphere.h  torus.cpp  torus.h
t1_engine/renderer/: MaterialLibrary.cpp  MaterialLibrary.h  PBR.cpp  PBR.h  PostProcessor.cpp  PostProcessor.h  command_buffer.cpp  command_buffer.h  gl_cache.cpp  gl_cache.h  pbr_capture.cpp  pbr_capture.h  render_command.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h
t1_engine/resources/: mesh_loader.cpp  mesh_loader.h  resources.cpp  resources.h  shader_loader.cpp  shader_loader.h  texture_loader.cpp  texture_loader.h
t1_engine/scene/: background.cpp  background.h  scene.cpp  scene.h  scene_node.cpp  scene_node.h
t1_engine/shading/: Texture.cpp  material.cpp  material.h  shader.cpp  shader.h  shading_types.h  texture.h  texture_cube.cpp  texture_cube.h
t1_math/: CMakeLists.txt  common.h  program.cpp  t1_math.h
t1_math/geometry/: plane.h
t1_math/linear_algebra/: operation.h  quaternion.h  transformation.h  vector.h
t1_math/test/: test_matrix.h  test_operations.h  test_transformations.h  test_vector.h
t1_math/trigonometry/: polar.cpp  polar.h  spherical.cpp  spherical.h
t1_utility/: CMakeLists.txt  floating_point.h  std_types.h  string_id.h
t1_utility/logging/: log.cpp  log.h
t1_utility/random/: random.cpp  random.h
t1_utility/timing/: diagnostics.h
